--- a/rentea_app/package.json
+++ b/rentea_app/package.json
@@ -11,6 +11,7 @@
     "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
+    "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
