getting back into it

--- a/rentea_app/package.json
+++ b/rentea_app/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.0",
     "firebase": "^7.17.1",
     "google-maps-react": "^2.0.6",
+    "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
@@ -24,6 +26,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://127.0.0.1:5000",
   "browserslist": {
     "production": [
       ">0.2%",
